fixed off process chart alignment

--- a/style.css
+++ b/style.css
@@ -1360,6 +1360,10 @@ footer {
     width: 300px;
   }
 
+  .process-3 {
+    bottom: 65px;
+  }
+
   footer {
     padding: 8px;
   }
